406 Reshape and  Transpose

--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEvklezT8GL3BB8iuSzOLq",
+      "authorship_tag": "ABX9TyMdJ3E7Yo6NHxbsS0WdqZcb",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -2207,11 +2207,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "rPNR5Q0taw5r",
-        "outputId": "e4a4def2-be1d-460f-bbd8-8469eb125789",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "rPNR5Q0taw5r",
+        "outputId": "e4a4def2-be1d-460f-bbd8-8469eb125789"
       },
       "source": [
         "np.var(high_var_array), np.var(low_var_array)"
@@ -2233,11 +2233,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "uMhPk1ena1xz",
-        "outputId": "9dbfabeb-0c2c-4baf-f076-00400e419b72",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "uMhPk1ena1xz",
+        "outputId": "9dbfabeb-0c2c-4baf-f076-00400e419b72"
       },
       "source": [
         "np.std(high_var_array), np.std(low_var_array)"
@@ -2259,11 +2259,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "cERRTcqFbADQ",
-        "outputId": "7ce8faf4-7d43-48b8-c83a-9df872c6c648",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "cERRTcqFbADQ",
+        "outputId": "7ce8faf4-7d43-48b8-c83a-9df872c6c648"
       },
       "source": [
         "np.mean(high_var_array), np.mean(low_var_array)"
@@ -2285,12 +2285,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "fFpveJXTbFpL",
-        "outputId": "3f72b486-f0f3-4bb5-8176-1c8d2c656612",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "fFpveJXTbFpL",
+        "outputId": "3f72b486-f0f3-4bb5-8176-1c8d2c656612"
       },
       "source": [
         "%matplotlib inline\n",
@@ -2318,12 +2318,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "H_TyrG44bOHF",
-        "outputId": "29cbe003-c0a8-42f4-e6fe-57a48abef2c4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 265
-        }
+        },
+        "id": "H_TyrG44bOHF",
+        "outputId": "29cbe003-c0a8-42f4-e6fe-57a48abef2c4"
       },
       "source": [
         "plt.hist(low_var_array)\n",
@@ -2342,6 +2342,451 @@
           "metadata": {
             "needs_background": "light"
           }
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "LeKCYqmCbYj4"
+      },
+      "source": [
+        "### Reshaping and Transposing"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZeZ0kU-bbfXc",
+        "outputId": "f6101414-7a9a-4d48-be9d-b557930e9e3f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2"
+      ],
+      "execution_count": 157,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 2. , 3.3],\n",
+              "       [4. , 5. , 6.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 157
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "n8fZos0Ibhbo",
+        "outputId": "3bd53bbf-3d7b-435a-bd2c-a6564c3748d6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3"
+      ],
+      "execution_count": 158,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6],\n",
+              "        [ 7,  8,  9]],\n",
+              "\n",
+              "       [[10, 11, 12],\n",
+              "        [13, 14, 15],\n",
+              "        [16, 17, 18]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 158
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "HzDCo0j_bkDS",
+        "outputId": "ebf93115-cadf-42ea-bfdc-cd2ebbbfedae",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2.shape, a3.shape"
+      ],
+      "execution_count": 159,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2, 3), (2, 3, 3))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 159
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "CuMXb3oSbmRo",
+        "outputId": "1d3692a4-c3d0-4b42-b0a6-9d2a1e5a4fbc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2.reshape(2, 3, 1)"
+      ],
+      "execution_count": 161,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1. ],\n",
+              "        [2. ],\n",
+              "        [3.3]],\n",
+              "\n",
+              "       [[4. ],\n",
+              "        [5. ],\n",
+              "        [6.5]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 161
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pJ6mtvxXbyBC",
+        "outputId": "10959902-af95-4c2d-8066-2792047d97e2",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2.reshape(2, 3, 1).shape"
+      ],
+      "execution_count": 162,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3, 1)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 162
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "q0-v59dub1I3",
+        "outputId": "a34f2033-426f-4e45-e9e8-a23d673f8fa7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3.shape"
+      ],
+      "execution_count": 163,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 163
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "8vk4JGokb2N5",
+        "outputId": "981fcd9a-3ba6-4692-bf59-ad6f66ebeeec",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2_reshape = a2.reshape(2, 3, 1)\n",
+        "a2_reshape"
+      ],
+      "execution_count": 167,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[1. ],\n",
+              "        [2. ],\n",
+              "        [3.3]],\n",
+              "\n",
+              "       [[4. ],\n",
+              "        [5. ],\n",
+              "        [6.5]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 167
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "PYf0zXgVb7yN",
+        "outputId": "68f36c28-398d-4e0d-e773-d4bfb1078d02",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2_reshape * a3"
+      ],
+      "execution_count": 168,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[  1. ,   2. ,   3. ],\n",
+              "        [  8. ,  10. ,  12. ],\n",
+              "        [ 23.1,  26.4,  29.7]],\n",
+              "\n",
+              "       [[ 40. ,  44. ,  48. ],\n",
+              "        [ 65. ,  70. ,  75. ],\n",
+              "        [104. , 110.5, 117. ]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 168
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bS_bBgIzcNLu",
+        "outputId": "74869358-7bec-4cbd-ad35-262fd7888b84",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2"
+      ],
+      "execution_count": 170,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 2. , 3.3],\n",
+              "       [4. , 5. , 6.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 170
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SMmAsogKcPO-",
+        "outputId": "e28bb16d-c8bd-4030-f1d2-a677da24c995",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2.shape"
+      ],
+      "execution_count": 171,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(2, 3)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 171
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "gZVQiOmFcH8F",
+        "outputId": "0864f869-afa0-4726-a05a-8586d270dd9b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Transpose\n",
+        "a2.T"
+      ],
+      "execution_count": 169,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 4. ],\n",
+              "       [2. , 5. ],\n",
+              "       [3.3, 6.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 169
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "bJGPATQJcQhk",
+        "outputId": "124608fb-d0c7-4d20-eded-37544dd29e79",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2.T.shape"
+      ],
+      "execution_count": 172,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 2)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 172
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-ObkVCDYcVSW",
+        "outputId": "9c2f3517-d088-41d5-d32a-249f25f62cdc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3"
+      ],
+      "execution_count": 173,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1,  2,  3],\n",
+              "        [ 4,  5,  6],\n",
+              "        [ 7,  8,  9]],\n",
+              "\n",
+              "       [[10, 11, 12],\n",
+              "        [13, 14, 15],\n",
+              "        [16, 17, 18]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 173
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dhDJ1ts5cWfc",
+        "outputId": "cce00dcc-0bc6-49cd-c657-ef88bd3e3862",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3.T"
+      ],
+      "execution_count": 174,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[[ 1, 10],\n",
+              "        [ 4, 13],\n",
+              "        [ 7, 16]],\n",
+              "\n",
+              "       [[ 2, 11],\n",
+              "        [ 5, 14],\n",
+              "        [ 8, 17]],\n",
+              "\n",
+              "       [[ 3, 12],\n",
+              "        [ 6, 15],\n",
+              "        [ 9, 18]]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 174
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "rhGlxxrGcYJq",
+        "outputId": "46e23005-5efc-468e-98e3-a0c46d864ca8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a3.shape, a3.T.shape"
+      ],
+      "execution_count": 175,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "((2, 3, 3), (3, 3, 2))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 175
         }
       ]
     }
