--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyNYYH2DFsnRRNO5TwzhcGFt",
+      "authorship_tag": "ABX9TyOIx28785gH+Is757xDXG+9",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3020,11 +3020,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CII4BM2IWIwg",
-        "outputId": "b677ba18-104c-4ab5-ac0b-8f5b2e117bc2",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "CII4BM2IWIwg",
+        "outputId": "b677ba18-104c-4ab5-ac0b-8f5b2e117bc2"
       },
       "source": [
         "np.random.seed(0)\n",
@@ -3054,12 +3054,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "neHrZ3tzWSnT",
-        "outputId": "b2072599-a0ca-49fe-d4ac-e15c74148958",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "neHrZ3tzWSnT",
+        "outputId": "b2072599-a0ca-49fe-d4ac-e15c74148958"
       },
       "source": [
         "# Create weekly_sales DataFrame\n",
@@ -3149,11 +3149,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "0liCk-DFWqgn",
-        "outputId": "09c94fa1-1c03-4adc-cfa0-553eeb4fecaa",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "0liCk-DFWqgn",
+        "outputId": "09c94fa1-1c03-4adc-cfa0-553eeb4fecaa"
       },
       "source": [
         "# Create prices array\n",
@@ -3177,12 +3177,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "CeDUxa0HWvy6",
-        "outputId": "81e32097-2614-4e91-8dfe-4afdfeac48f6",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "CeDUxa0HWvy6",
+        "outputId": "81e32097-2614-4e91-8dfe-4afdfeac48f6"
       },
       "source": [
         "# Create prices Dataframe\n",
@@ -3244,11 +3244,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ks_UY9Lz2B4r",
-        "outputId": "2381ec5a-9fb5-4ff4-926e-df7f72cd737e",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ks_UY9Lz2B4r",
+        "outputId": "2381ec5a-9fb5-4ff4-926e-df7f72cd737e"
       },
       "source": [
         "prices.shape, sales_amounts.shape"
@@ -3270,11 +3270,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "7BukTlQvXHPP",
-        "outputId": "3cd04481-d946-47e1-c6df-ad0ea1de5869",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "7BukTlQvXHPP",
+        "outputId": "3cd04481-d946-47e1-c6df-ad0ea1de5869"
       },
       "source": [
         "# Shapes aren't aligned, we habe to transpose\n",
@@ -3298,11 +3298,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "guNsF7ii2UUW",
-        "outputId": "66cc305c-2b44-46f2-bfc8-5a84ec8cbac1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "guNsF7ii2UUW",
+        "outputId": "66cc305c-2b44-46f2-bfc8-5a84ec8cbac1"
       },
       "source": [
         "# Create daily sale\n",
@@ -3325,12 +3325,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "4WrJup422fAY",
-        "outputId": "97f35977-f584-4956-a7cc-afa346090102",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 80
-        }
+        },
+        "id": "4WrJup422fAY",
+        "outputId": "97f35977-f584-4956-a7cc-afa346090102"
       },
       "source": [
         "daily_sales = butter_prices.dot(weekly_sales.T)\n",
@@ -3393,11 +3393,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "5q8qgi7v20dn",
-        "outputId": "a8ded34d-a5bb-42d0-f735-542d94c7d144",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "5q8qgi7v20dn",
+        "outputId": "a8ded34d-a5bb-42d0-f735-542d94c7d144"
       },
       "source": [
         "daily_sales.shape"
@@ -3419,11 +3419,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "_My8O37123nu",
-        "outputId": "6d00ebc0-b696-4809-a38a-1ce9aa6b57f9",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_My8O37123nu",
+        "outputId": "6d00ebc0-b696-4809-a38a-1ce9aa6b57f9"
       },
       "source": [
         "weekly_sales.shape"
@@ -3445,12 +3445,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "m_qlSqKY2nAI",
-        "outputId": "50e82021-0478-4d8b-82a8-78e8be7fc9f5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 646
-        }
+        },
+        "id": "m_qlSqKY2nAI",
+        "outputId": "50e82021-0478-4d8b-82a8-78e8be7fc9f5"
       },
       "source": [
         "# Doesn't work, not right shape\n",
@@ -3493,12 +3493,12 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "DpHwQPgf2_1U",
-        "outputId": "8f543419-8310-4426-a492-c41485d1d7a5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 204
-        }
+        },
+        "id": "DpHwQPgf2_1U",
+        "outputId": "8f543419-8310-4426-a492-c41485d1d7a5"
       },
       "source": [
         "weekly_sales[\"Total ($)\"] = daily_sales.T\n",
@@ -3587,6 +3587,266 @@
           "execution_count": 119
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0d0-up3h3IS1"
+      },
+      "source": [
+        "### Comparison Operators"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZvKiNAIA3SJz",
+        "outputId": "89be874b-e703-4ebf-f738-82293b7f2a2d",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1"
+      ],
+      "execution_count": 120,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 120
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SXXP2e1c3Tgl",
+        "outputId": "0c7e086c-779a-46b1-e65e-80af814266f0",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a2"
+      ],
+      "execution_count": 121,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1. , 2. , 3.3],\n",
+              "       [4. , 5. , 6.5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 121
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ayUBuOli3Upb",
+        "outputId": "6f281ac9-ba5f-4376-e333-1443c21874b8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1 > a2"
+      ],
+      "execution_count": 122,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[False, False, False],\n",
+              "       [False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 122
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6YuOotKm3Y9o",
+        "outputId": "8e92e1c8-565f-4f5b-ec37-36a648e67bfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1 >= a2"
+      ],
+      "execution_count": 123,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True, False],\n",
+              "       [False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 123
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-HGrR2O83cWg",
+        "outputId": "141e6178-6cae-4c89-bf87-aa45566aa56c",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "bool_array = a1 >= a2\n",
+        "bool_array"
+      ],
+      "execution_count": 124,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True, False],\n",
+              "       [False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 124
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "lM-wt-x33fTR",
+        "outputId": "3d111f6f-36fa-4e7c-fc3e-c3397905d160",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "type(bool_array), bool_array.dtype"
+      ],
+      "execution_count": 126,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(numpy.ndarray, dtype('bool'))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 126
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LtoygbDw3ice",
+        "outputId": "1aed3044-b7d4-4a59-a96c-d321a3602f8a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1 > 5"
+      ],
+      "execution_count": 127,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([False, False, False])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 127
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "u0QmQbG63rFz",
+        "outputId": "a77e3463-e4c2-4eae-f198-361243d96dfc",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1 == a1"
+      ],
+      "execution_count": 130,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([ True,  True,  True])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 130
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "B88lidKd3t9C",
+        "outputId": "165b9f9e-302e-4015-bb7c-29db7ca7a12f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "a1 == a2"
+      ],
+      "execution_count": 131,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[ True,  True, False],\n",
+              "       [False, False, False]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 131
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "5jmggMRX3xR5"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
