--- a/13_numpy_introductions.ipynb
+++ b/13_numpy_introductions.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "13_numpy_introductions",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIx28785gH+Is757xDXG+9",
+      "authorship_tag": "ABX9TyMWKGQtbEFVcay/5OfptVN4",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -3600,11 +3600,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ZvKiNAIA3SJz",
-        "outputId": "89be874b-e703-4ebf-f738-82293b7f2a2d",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ZvKiNAIA3SJz",
+        "outputId": "89be874b-e703-4ebf-f738-82293b7f2a2d"
       },
       "source": [
         "a1"
@@ -3626,11 +3626,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "SXXP2e1c3Tgl",
-        "outputId": "0c7e086c-779a-46b1-e65e-80af814266f0",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "SXXP2e1c3Tgl",
+        "outputId": "0c7e086c-779a-46b1-e65e-80af814266f0"
       },
       "source": [
         "a2"
@@ -3653,11 +3653,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "ayUBuOli3Upb",
-        "outputId": "6f281ac9-ba5f-4376-e333-1443c21874b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "ayUBuOli3Upb",
+        "outputId": "6f281ac9-ba5f-4376-e333-1443c21874b8"
       },
       "source": [
         "a1 > a2"
@@ -3680,11 +3680,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "6YuOotKm3Y9o",
-        "outputId": "8e92e1c8-565f-4f5b-ec37-36a648e67bfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "6YuOotKm3Y9o",
+        "outputId": "8e92e1c8-565f-4f5b-ec37-36a648e67bfc"
       },
       "source": [
         "a1 >= a2"
@@ -3707,11 +3707,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-HGrR2O83cWg",
-        "outputId": "141e6178-6cae-4c89-bf87-aa45566aa56c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "-HGrR2O83cWg",
+        "outputId": "141e6178-6cae-4c89-bf87-aa45566aa56c"
       },
       "source": [
         "bool_array = a1 >= a2\n",
@@ -3735,11 +3735,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lM-wt-x33fTR",
-        "outputId": "3d111f6f-36fa-4e7c-fc3e-c3397905d160",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "lM-wt-x33fTR",
+        "outputId": "3d111f6f-36fa-4e7c-fc3e-c3397905d160"
       },
       "source": [
         "type(bool_array), bool_array.dtype"
@@ -3761,11 +3761,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "LtoygbDw3ice",
-        "outputId": "1aed3044-b7d4-4a59-a96c-d321a3602f8a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "LtoygbDw3ice",
+        "outputId": "1aed3044-b7d4-4a59-a96c-d321a3602f8a"
       },
       "source": [
         "a1 > 5"
@@ -3787,11 +3787,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "u0QmQbG63rFz",
-        "outputId": "a77e3463-e4c2-4eae-f198-361243d96dfc",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "u0QmQbG63rFz",
+        "outputId": "a77e3463-e4c2-4eae-f198-361243d96dfc"
       },
       "source": [
         "a1 == a1"
@@ -3813,11 +3813,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "B88lidKd3t9C",
-        "outputId": "165b9f9e-302e-4015-bb7c-29db7ca7a12f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "B88lidKd3t9C",
+        "outputId": "165b9f9e-302e-4015-bb7c-29db7ca7a12f"
       },
       "source": [
         "a1 == a2"
@@ -3838,9 +3838,285 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
         "id": "5jmggMRX3xR5"
+      },
+      "source": [
+        "## 5. Sorting arrays"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "27XqO2bb3-dY",
+        "outputId": "e7a94737-5b21-455d-d1a3-eae6fa92353c"
+      },
+      "source": [
+        "random_array = np.random.randint(10, size=(3, 5))\n",
+        "random_array"
+      ],
+      "execution_count": 132,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[7, 8, 1, 5, 9],\n",
+              "       [8, 9, 4, 3, 0],\n",
+              "       [3, 5, 0, 2, 3]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 132
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYjzgrAG4E_H",
+        "outputId": "568dad64-e72e-4c9b-ddaf-b0864b401736"
+      },
+      "source": [
+        "random_array.shape"
+      ],
+      "execution_count": 133,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(3, 5)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 133
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "688C4jmV4H-D",
+        "outputId": "8ad82beb-71d2-4398-d0f6-3a21c06f0750"
+      },
+      "source": [
+        "np.sort(random_array)"
+      ],
+      "execution_count": 134,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[1, 5, 7, 8, 9],\n",
+              "       [0, 3, 4, 8, 9],\n",
+              "       [0, 2, 3, 3, 5]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 134
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-szYa4Xr4PVJ",
+        "outputId": "7f7ba530-2fa2-4b7b-cfdd-d04c4485f567"
+      },
+      "source": [
+        "np.argsort(random_array)"
+      ],
+      "execution_count": 135,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[2, 3, 0, 1, 4],\n",
+              "       [4, 3, 2, 0, 1],\n",
+              "       [2, 3, 0, 4, 1]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 135
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "HJrVsFO74Tht",
+        "outputId": "dca7f0b3-082e-4f3d-e414-9edc6ea2a339"
+      },
+      "source": [
+        "a1"
+      ],
+      "execution_count": 136,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 2, 3])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 136
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "0HZEEcrP4VOe",
+        "outputId": "a0817063-8128-4fae-ab93-98e27fd4d388"
+      },
+      "source": [
+        "np.argsort(a1)"
+      ],
+      "execution_count": 137,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0, 1, 2])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 137
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_KvO2yCa4YBl",
+        "outputId": "9ce3f09c-3d29-41f0-b0e6-ff39b006f741"
+      },
+      "source": [
+        "np.argmin(a1)"
+      ],
+      "execution_count": 138,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 138
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "m-KrpsWP4dxP",
+        "outputId": "f45920ba-ef4e-4bde-d3bc-8acc0038bc28"
+      },
+      "source": [
+        "np.argmax(a1)"
+      ],
+      "execution_count": 140,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 140
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "KP6NY1OD4Z_B",
+        "outputId": "830f025e-b0a6-47b6-f09d-14cedac46cd4"
+      },
+      "source": [
+        "np.argmax(random_array, axis=0)"
+      ],
+      "execution_count": 144,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1, 1, 1, 0, 0])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 144
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "aCIqYLMq4lG_",
+        "outputId": "c0054c9b-4b0b-4aac-c920-9025fe8f4b12"
+      },
+      "source": [
+        "np.argmax(random_array, axis=1)"
+      ],
+      "execution_count": 145,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([4, 1, 1])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 145
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "NIuV-Tyb46Wm"
       },
       "source": [
         ""
